# pastel

./: .gitignore  .hgignore  CMakeLists.txt  SConstruct  adaptable_iterator.txt  adaptable_iterator_notes.txt  adaptable_iterators.txt  adaptable_iterators_notes.txt  aggregation_files.txt  algorithmic_continuity.txt  blog.txt  bug_fights.txt  build.bat  build.txt  build_dependencies.bat  build_docs.bat  build_pastel.m  building.txt  building_pastelmatlab.txt  cmake_experiences.txt  compiler_differences.txt  config.py  constcast.txt  dependencies.txt  deprecated.txt  deprecated_techniques.txt  documentation.txt  enhanced_iterator.txt  enhanced_iterators.txt  external.txt  forward_declaration.txt  general_principles.txt  index.htm  installation.txt  internal.txt  iterator_debugging.txt  layered_structures.txt  license.txt  more_news.txt  named_parameter.txt  (+38 more)
example/ConvexHull/: CMakeLists.txt  ConvexHull.vcproj  convexhull.cpp  convexhullmain.cpp
example/LeastSquares/: CMakeLists.txt  LeastSquares.vcproj  leastsquares.cpp
example/NearestNeighbour/: CMakeLists.txt  NearestNeighbour.vcproj  NearestNeighbour.vcxproj  nearest_neighbours.cpp  nearest_neighbours.txt  nearest_neighbours_main.cpp  nearestneighbour.cpp  nearestneighbourmain.cpp  readme.txt
example/cfasttrie_performance/: CMakeLists.txt  cfasttrie_performance.cpp
example/skipfast_performance/: CMakeLists.txt  skipfast_performance.cpp
pastel/: CMakeLists.txt  Pastel-Debug-Options.props  Pastel-Release-Options.props  Pastel.Options.props  Pastel.sln  SConscript  adaptable_iterator.txt  adaptable_iterator_notes.txt  aggregate_files.txt  algorithmic_continuity.txt  build_pastel.m  building.txt  building_pastelmatlab.txt  constcast.txt  dependencies.txt  deprecated_techniques.txt  documentation.txt  download.txt  enhanced_iterator.txt  external.txt  forward_declaration.txt  general_principles.txt  highlights.txt  import_pastel.m  installation.txt  internal.txt  iterator_debugging.txt  layered_structures.txt  license.txt  named_parameter.txt  pastel.txt  pastel_license.txt  pastel_license_matlab.txt  premake4.lua  proof.txt  release_history.txt  remarks.txt  restrict_deduction.txt  scoped_enums.txt  settings_types.txt  (+13 more)
pastel/+pastelgeometry/: PointKdTree.m  coherent_point_drift.m  coherent_point_drift.txt  coherent_point_drift_derivation.txt  draw_matching.m  fish.txt  icp.m  ls_affine.m  ls_conformal_affine.m  ls_linear.m  ls_translation.m  ls_translation.txt  point_pattern_matching_kr.m  point_pattern_matching_vw.m  pointkdtree_as_points.m  pointkdtree_clear.m  pointkdtree_construct.m  pointkdtree_copy.m  pointkdtree_destruct.m  pointkdtree_dimension.m  pointkdtree_erase.m  pointkdtree_hide.m  pointkdtree_insert.m  pointkdtree_leaves.m  pointkdtree_merge.m  pointkdtree_nodes.m  pointkdtree_points.m  pointkdtree_refine.m  pointkdtree_search_nearest.m  pointkdtree_show.m  pointset_concept.m  test_icp.m  test_icp_reporter.m  test_ls_affine.m  test_ls_conformal_affine.m  test_point_pattern_matching_kr.m  test_point_pattern_matching_vw.m  test_pointkdtree.m
pastel/+pastelmath/: random_orthogonal.m  random_projection.m  test_random_orthogonal.m
pastel/+pastelsys/: CMakeLists.txt  biunique_matching.m  concept_check.m  integer_concept.m  lambda_function_concept.m  maximum_bipartite_matching.m  non_negative_concept.m  positive_concept.m  process_options.m  random_generalized_normal.m  real_concept.m  real_matrix_concept.m  square_matrix_concept.m  string_concept.m
pastel/device/: CMakeLists.txt  PastelDevice.vcproj  PastelDevice.vcxproj  SConscript  devicelibrary.cpp  devicelibrary.h  devices.txt  devicesystem.cpp  devicesystem.h  devicesystem.hpp  fxdevice.cpp  fxdevice.h  gfxdevice.cpp  gfxdevice.h  graphics.txt  multithreading.h  multithreading.txt  mutex.cpp  mutex.h  mutex.hpp  pasteldevice.h  pasteldevice.txt  pasteldevice.vcproj  pasteldevice.vcxproj.filters  sound.txt  thread.cpp  thread.h  timedevice.cpp  timedevice.h  timer.cpp  timer.h  timing.h  timing.txt  ui.cpp  ui.h  ui.txt
pastel/doc/: CMakeLists.txt  pasteldoc.cpp
pastel/dsp/: CMakeLists.txt  PastelDsp.vcproj  PastelDsp.vcxproj  PastelDsp.vcxproj.filters  box_filter.cpp  box_filter.h  cosine_transform.h  cosine_transform.hpp  cosine_transform.txt  cubic_filter.cpp  cubic_filter.h  discretecosine.h  discretecosine.hpp  discretecosine.txt  discretefourier.h  discretefourier.hpp  discretefourier.txt  dsplibrary.cpp  dsplibrary.h  filter.cpp  filter.h  filter.txt  filter_all.h  filterdesign.cpp  filterdesign.h  filterform.h  filterform.hpp  filters.h  filters.txt  fourier_transform.h  fourier_transform.hpp  fourier_transform.txt  gaussian_filter.cpp  gaussian_filter.h  haar_transform.h  haar_transform.hpp  haar_transform.txt  hadamard_transform.h  hadamard_transform.hpp  hadamard_transform.txt  (+40 more)
pastel/fx/: fxlibrary.h  instrument.cpp  instrument.h  machine.cpp  machine.h  mixer.cpp  mixer.h  pastelfx.vcproj  resampler.h  sinsynth.cpp  sinsynth.h  sound.cpp  sound.h
pastel/geometry/: CMakeLists.txt  PastelGeometry.vcproj  PastelGeometry.vcxproj  SConscript  acceptpoint.h  acceptpoint.txt  acceptpoint_concept.h  alignedbox.h  alignedbox.hpp  alignedbox.txt  alignedbox_diameter.h  alignedbox_diameter.hpp  alignedbox_tools.h  alignedbox_tools.hpp  alignedboxbase.h  alignedboxbase.hpp  alignedplane.h  alignedplane.hpp  alignedplane.txt  all_indicator.h  all_nearest_neighbors.h  all_nearest_neighbors.hpp  all_nearest_neighbors_bruteforce.h  (+653 more)
pastelmatlab/: CMakeLists.txt  matlab_argument.h  matlab_argument.txt  matlab_class_ids.h  matlab_coherent_point_drift.cpp  matlab_function.cpp  matlab_function.h  matlab_function.txt  matlab_ls_affine.cpp  matlab_matrix.h  matlab_maximum_bipartite_matching.cpp  matlab_mex.h  matlab_point_pattern_matching_kr.cpp  matlab_point_pattern_matching_vw.cpp  matlab_pointkdtree.cpp  matlab_random_generalized_normal.cpp  matlab_random_orthogonal.cpp  matlab_scalar.h  pastelmatlab.cpp  pastelmatlab.h  pastelmatlab.txt  pastelsysmatlab.cpp  pastelsysmatlab.h
test/: CMakeLists.txt  SConscript  catch.hpp  test_init.cpp  test_init.h
(+4064 files in other folders)
