if (BuildLibraries)
	add_subdirectory ("sys")
	add_subdirectory ("math")
	add_subdirectory ("geometry")
	add_subdirectory ("gfx")
	add_subdirectory ("doc")
endif()

if (BuildMatlab)
	add_subdirectory ("matlab")
	add_subdirectory ("sysmatlab")
	add_subdirectory ("mathmatlab")
	add_subdirectory ("geometrymatlab")
	add_subdirectory ("+pastelsys")
	add_subdirectory ("+pastelmath")
	add_subdirectory ("+pastelgeometry")
endif()